--- a/project.json
+++ b/project.json
@@ -3,8 +3,10 @@
   "description": "This process connects to Jot Form \"New Certifications\" and creates a new entry for the new employees that want to join the USN program.",
   "main": "Main.xaml",
   "dependencies": {
+    "Microsoft.Activities": "[1.0.1]",
     "UiPath.Database.Activities": "[1.3.7369.25200]",
     "UiPath.Excel.Activities": "[2.8.5]",
+    "UiPath.Mail.Activities": "[1.8.6]",
     "UiPath.Script.Activities": "[1.0.6710.16240]",
     "UiPath.System.Activities": "[20.4.0]",
     "UiPath.UIAutomation.Activities": "[20.4.1]",
